Spacing issue

--- a/src/component/Body/Body.css
+++ b/src/component/Body/Body.css
@@ -82,8 +82,7 @@ p {
     }
 
     #modal>span {
-        margin-top: 0;
-        right: 0
+        margin-top: 0
     }
 
     #first-container>div {
